Fix empty array table header and scrollable grid alignment

--- a/web_ui/src/app/single-annotation-report/single-annotation-report.component.css
+++ b/web_ui/src/app/single-annotation-report/single-annotation-report.component.css
@@ -152,8 +152,7 @@ hr {
 
 .value-grid-container {
   display: grid;
-  width: 65%;
-  max-width: 100%;
+  width: 100%;
 }
 
 .value-grid-header {
